<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/congrats"
            android:textColor="#673AB7"
            android:textSize="32sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/madeit"
            android:textColor="#673AB7"
            android:textSize="28sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/yourtime"
            android:textAlignment="viewEnd"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/yourtime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:textAlignment="viewStart"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:layout_marginTop="64dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/bestTime"
            android:textAlignment="viewEnd"
            android:textColor="#673AB7"
            android:textSize="24sp"
            android:padding="10dp" />

        <TextView
            android:id="@+id/besttime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:textAlignment="viewStart"
            android:textColor="#673AB7"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:layout_marginBottom="92dp"
        android:layout_weight="2"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/play"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text="@string/playagain" />

        <Button
            android:id="@+id/exit"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text="@string/exit" />
    </LinearLayout>

</LinearLayout>